# hnu-doc

./: .gitignore  Cargo.toml  HnuDoc.md  README.md  docker-compose.yml  hnudoc.json
config/: config.local.example.toml  config.toml
docs/: openapi-apifox.yaml
hnudoc/: Cargo.toml
hnudoc/src/: config.rs  main.rs  result.rs
hnudoc/src/infra/: mod.rs  redis.rs  storage.rs  verify.rs
hnudoc/src/infra/mysql/: collection.rs  document.rs  mod.rs  pending.rs  user.rs
hnudoc/src/middlewares/: catch_panic.rs  cors.rs  default.rs  logging.rs  mod.rs  timeout.rs
hnudoc/src/routers/: collection.rs  document.rs  mod.rs  ping.rs  search.rs  user.rs
hnudoc/src/service/: collection.rs  document.rs  mod.rs  pending.rs  search.rs  user.rs
hnudoc/src/utils/: crypto.rs  jwt.rs  mod.rs  pdf.rs  pow.rs  serde.rs  time.rs
migrations/: 001_init.sql
scripts/: init-db.cmd  init-db.ps1
spider_2024/: .gitignore  Cargo.toml  README.md
spider_2024/src/: config.rs  error.rs  lib.rs
spider_2024/src/dtos/: electricity.rs  gym.rs  hdjw.rs  lab.rs  netflow.rs  pt.rs  xgxt.rs
spider_2024/src/handlers/: electricity.rs  gym.rs  hdjw.rs  lab.rs  mod.rs  netflow.rs  pt.rs  xgxt.rs
spider_2024/src/spiders/: electricity.rs  graduate.rs  gym.rs  hdjw.rs  lab.rs  login.rs  mod.rs  netflow.rs  pt.rs  xgxt.rs
spider_2024/src/utils/: cache.rs  captcha.rs  crypto.rs  db.rs  mod.rs  redis.rs  request.rs
