[package]
name = "spider_2024"
version = "1.0.0"
edition = "2024"

[lib]
name = "spider_2024"
path = "src/lib.rs"

[dependencies]
redis = { version = "0.28.2", features = [
    "tokio-comp",
    "aio",
    "connection-manager",
] }
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.41.1", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
reqwest = { version = "0.12.2", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
    "multipart",
] } # 开启gzip可信电子凭证才能正常解析
#isahc = { version = "1.7.2", features = ["json"] }
#ureq = { version = "2.10.1", features = ["json"] }
# 加密用
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
ecb = { version = "0.1.2", features = ["alloc", "std"] }
rand_core = "0.6.4"
base64 = "0.22.1"
md5 = "0.7.0"
num-bigint = "0.4.6"
# 数据解析
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
# serde_json = { version = "1.0.128" , features = ["preserve_order"]} # 保持序列化时字段顺序，有的可能有用
anyhow = "1.0.93" # 错误处理
# dashmap = "6.1.0"
urlencoding = "2.1.3"
clia-tracing-config = "0.2.7"
log = "0.4.22"
thiserror = "1.0.64"                                  # 错误处理，以宏的方式生成错误类型
chrono = "0.4.38"
futures = "0.3.31"
moka = { version = "0.12.10", features = ["future"] }
rand = "0.8.5"
toml = "0.8.19"
pdf-extract = "0.8.0"
scraper = "0.23.1"
bytes = "1.10.1"
once_cell = "1.21.4"
